[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainScenes/Gameover.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Menus-style.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[node name="Gameover" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GameoverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -119.0
margin_right = 135.0
margin_bottom = 108.0
custom_constants/separation = 15

[node name="ScoreLabel" type="Label" parent="GameoverMenu/VBoxContainer"]
margin_right = 237.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "SCORE: 0"
align = 1

[node name="HighScoreLabel" type="Label" parent="GameoverMenu/VBoxContainer"]
margin_top = 60.0
margin_right = 237.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "BEST: 0"
align = 1

[node name="Restart" type="Button" parent="GameoverMenu/VBoxContainer"]
margin_top = 120.0
margin_right = 237.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 65 )
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="Sprite" type="Sprite" parent="GameoverMenu"]
position = Vector2( 216, 289 )
scale = Vector2( 10, 10 )
z_index = -1
texture = ExtResource( 3 )

[connection signal="pressed" from="GameoverMenu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
